--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@mapbox/mapbox-gl-language": "^0.10.1",
+    "deck.gl": "^7.1.10",
     "mapbox-gl": "^1.2.0",
     "node-sass": "^4.11.0",
     "vue": "^2.5.2",
