--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "mapbox-gl": "^1.3.1",
     "node-sass": "^4.11.0",
+    "three": "^0.108.0",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
     "vuex": "^3.1.1"
