--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "deck.gl": "^7.2.6",
     "mapbox-gl": "^1.3.1",
     "node-sass": "^4.11.0",
     "three": "^0.108.0",
